[package]
name = "tavtop"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "*"
rstest = "*"
rayon = "*"
const_panic = "0.2.11"

num-traits = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
home = "0.5.11"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = {level = "deny", priority = 0}
pedantic = {level = "deny", priority = -1}
nursery = {level = "deny", priority = -1}
unwrap_used = {level = "deny", priority = 0}

[profile.release]
opt-level = 0
lto = true
codegen-units = 1
panic = "abort"
stip = "symbols"